# DocumentParse

./: .gitignore  README.md  pyproject.toml
DocumentParse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
doc_parser/: main.py
doc_parser/output/: 2025_output.md
doc_parser/output/docs/: 2026_수시_output.json  2026_수시_output.md  25-2_종강시_output.md
doc_parser/output/test/: 2025_output.md  2025_vlm_response_batch_1_pages_1-1.md  2025_vlm_response_batch_2_pages_2-2.md  2025_vlm_response_batch_3_pages_3-3.md  2025_vlm_response_batch_4_pages_4-4.md
doc_parser/src/: config.py  docling_setup.py  processing.py
docling/docling/datamodel/: pipeline_options.py
docling/docling/models/: base_ocr_model.py  easyocr_model.py  paddle_ocr_model.py
docling/docling/models/plugins/: defaults.py
docling/docling/pipeline/: ocr_enhanced_pipeline.py  vlm_pipeline.py
docling/tests/data/csv/: csv-comma-in-cell.csv  csv-comma.csv  csv-inconsistent-header.csv  csv-pipe.csv  csv-semicolon.csv  csv-tab.csv  csv-too-few-columns.csv  csv-too-many-columns.csv
docling/tests/data/uspto/: ipg07997973.xml
