[project]
name = "DocumentParse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "acres==0.5.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "apted==1.0.3",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "bidict==0.23.1",
    "bs4==0.0.2",
    "cachetools==6.1.0",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "ci-info==0.3.0",
    "click==8.2.1",
    "cmudict==1.1.1",
    "colorlog==6.9.0",
    "configobj==5.0.9",
    "configparser==7.2.0",
    "contourpy==1.3.3",
    "cryptography==45.0.5",
    "cssselect==1.3.0",
    "cssutils==2.11.1",
    "cycler==0.12.1",
    "cython==3.1.2",
    "dataclasses-json==0.6.7",
    "dill==0.4.0",
    "distance==0.1.3",
    "distro==1.9.0",
    "docling",
    "docling-core==2.43.0",
    "docling-ibm-models==3.8.1",
    "docling-parse==4.1.0",
    "easyocr==1.7.2",
    "einops==0.8.1",
    "emoji==1.2.0",
    "et-xmlfile==2.0.0",
    "etelemetry==0.3.1",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "fitz==0.0.1.dev2",
    "fonttools==4.59.0",
    "frontend==0.0.3",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "ftfy==6.3.1",
    "gputil==1.4.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "hangul-jamo==1.0.1",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.33.4",
    "idna==3.10",
    "imageio==2.37.0",
    "imagesize==1.4.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jamo==0.4.1",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonlines==3.1.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.8",
    "kollocate==0.0.2",
    "koparadigm==0.10.0",
    "kss==6.0.4",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-openai==0.3.28",
    "langchain-text-splitters==0.3.9",
    "langsmith==0.4.10",
    "latex2mathml==3.78.0",
    "lazy-loader==0.4",
    "levenshtein==0.27.1",
    "looseversion==1.3.0",
    "lxml==5.1.0",
    "markdown-it-py==3.0.0",
    "marko==2.1.4",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "mistune==2.0.4",
    "more-itertools==10.7.0",
    "mpire==2.10.2",
    "mpmath==1.3.0",
    "multidict==6.6.3",
    "multiprocess==0.70.18",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "nibabel==5.3.2",
    "ninja==1.11.1.4",
    "nipype==1.10.0",
    "numpy==2.2.6",
    "openai==1.96.1",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python-headless==4.12.0.88",
    "openpyxl==3.1.5",
    "opt-einsum==3.3.0",
    "orjson==3.11.1",
    "pandas==2.3.1",
    "pathlib==1.0.1",
    "pdfminer-six==20250506",
    "pdfplumber==0.11.7",
    "pecab==1.0.8",
    "pillow==11.3.0",
    "pluggy==1.6.0",
    "premailer==3.10.0",
    "prettytable==3.16.0",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "prov==2.1.1",
    "puremagic==1.30",
    "py-cpuinfo==9.0.0",
    "pyarrow==21.0.0",
    "pyclipper==1.3.0.post6",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydot==4.0.1",
    "pylatexenc==2.10",
    "pyparsing==3.2.3",
    "pypdfium2==4.30.1",
    "pytest==8.4.1",
    "python-bidi==0.6.6",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-levenshtein==0.27.1",
    "python-mecab-ko==1.3.7",
    "python-mecab-ko-dic==2.1.1.post2",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "pyxnat==1.6.3",
    "pyyaml==5.4.1",
    "rapidfuzz==3.13.0",
    "rdflib==7.1.4",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rpds-py==0.26.0",
    "rtree==1.4.0",
    "ruamel-yaml==0.18.14",
    "ruamel-yaml-clib==0.2.12",
    "safetensors==0.5.3",
    "scikit-image==0.25.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.0",
    "semchunk==2.2.2",
    "sentence-transformers==5.0.0",
    "shapely==2.1.1",
    "shellingham==1.5.4",
    "simplejson==3.20.1",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.42",
    "starlette==0.47.2",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tifffile==2025.6.11",
    "tiktoken==0.9.0",
    "tokenizers==0.21.2",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tossi==0.3.1",
    "tqdm==4.67.1",
    "traits==7.0.2",
    "transformers==4.53.2",
    "typer==0.16.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ujson==5.10.0",
    "unidecode==1.4.0",
    "urllib3==2.5.0",
    "uv==0.8.4",
    "uvicorn==0.35.0",
    "whoosh==2.7.4",
    "xlrd==1.2.0",
    "xlsxwriter==3.2.5",
    "yarl==1.20.1",
    "zstandard==0.23.0",
]

[tool.uv.sources]
docling = { git = "https://github.com/docling-project/docling.git", rev = "e1e305369552b82d3f09f0c113ea8b54d5c90658" }

[tool.setuptools.packages.find]
where = ["."]
include = ["doc_parser*", "docling*"]

